[refactor] clazz.getInstance() is deprecated since java9